<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/textViewFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_secure_storage_test_file_name_label"/>

        <EditText
            android:id="@+id/editTextFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_secure_storage_test_file_hint"
            android:inputType="text"
            android:text="@string/str_secure_storage_test_file_name">

            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_secure_storage_test_file_password_label"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_secure_storage_test_file_password_hint"
            android:inputType="textVisiblePassword">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonReadFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:text="@string/str_secure_storage_test_file_read"/>

            <Button
                android:id="@+id/buttonWriteFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:text="@string/str_secure_storage_test_file_write"/>

            <Button
                android:id="@+id/buttonAppendFile"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:filterTouchesWhenObscured="true"
                android:text="@string/str_secure_storage_test_file_append"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/large_file_warning_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/large_file_warning_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/str_secure_storage_large_file_warning"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonPreviousFilePage"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:filterTouchesWhenObscured="true"
                    android:text="@string/str_secure_storage_previous_file_page_button"/>

                <Button
                    android:id="@+id/buttonNextFilePage"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:filterTouchesWhenObscured="true"
                    android:text="@string/str_secure_storage_next_file_page_button"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextUserText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/str_secure_storage_test_file_enter_text_hint"
            android:inputType="textMultiLine"/>

    </LinearLayout>
</ScrollView>